# minqlx-plugin-tests

./: .coveragerc  .gitattributes  .gitignore  .mypyrc  .pre-commit-config.yaml  .pylintrc  LICENSE  README.md  build.py  mypy.ini  pyproject.toml  requirements-dev.txt  requirements-tests-py36.txt  requirements-tests.txt  requirements.txt  setup.cfg
.github/: dependabot.yml
.github/workflows/: checks.yml  ci.yml  coverage.yml  test.yml
experimental/: README.md
experimental/python/: asdf.py  balancetwo.py  bday.py  cmdlist.py  custom_votes.py  elocheck.py  showdown.py  spec_rotation.py  weird_stats.py
experimental/python/discord_extensions/: admin.py  event.py  qlstats.py  slap.py  status.py  subscribe.py  topic_updater.py  triggered_chat.py
minqlx-plugins/: duelarena.py  thirtysecwarn.py
minqlx_plugin_test/: __init__.py  game.py  player.py  plugin.py
src/: README.md  auto_rebalance.py  auto_rebalance.pyi  autoready.py  autoready.pyi  custom_modes_vote.py  custom_modes_vote.pyi  duelarena.py  duelarena.pyi  fastvotes.py  fastvotes.pyi  frag_stats.py  frag_stats.pyi  last_played.py  merciful_elo_limit.py  merciful_elo_limit.pyi  mydiscordbot.py  qlstats_privacy_policy.py  qlstats_privacy_policy.pyi  thirtysecwarn.py  thirtysecwarn.pyi
src/discord_extensions/: README.md  admin.py  event.py  openai_bridge.py  qlstats.py  slap.py  status.py  subscribe.py  topic_updater.py  triggered_chat.py  uptime.py
src/experimental/: admin_votes.py  asdf.py  balancetwo.py  bday.py  chat_fraggers.py  cmdlist.py  custom_votes.py  elocheck.py  env_dmg.py  openai_bot.py  showdown.py  spec_rotation.py  team_shots.py  uptime.py  weird_stats.py  weird_stats.pyi
src/experimental/discord_extensions/: admin.py  event.py  qlstats.py  slap.py  status.py  subscribe.py  topic_updater.py  triggered_chat.py
src/main/python/: afk_auto_spec.py  auto_rebalance.py  autoready.py  custom_modes_vote.py  discordbot.py  duelarena.py  duelarena2.py  elocheck.py  fastvotepass.py  fastvotes.py  frag_stats.py  merciful_elo_limit.py  mydiscordbot.py  qlstats_privacy_policy.py  thirtysecwarn.py
src/main/python/minqlx/: __init__.py  _commands.py  _core.py  _events.py  _game.py  _handlers.py  _minqlx.py  _player.py  _plugin.py  _zmq.py  database.py
src/minqlx/: __init__.py  __init__.pyi  _commands.py  _commands.pyi  _core.py  _core.pyi  _events.py  _events.pyi  _game.py  _game.pyi  _handlers.py  _handlers.pyi  _minqlx.py  _minqlx.pyi  _player.py  _player.pyi  _plugin.py  _plugin.pyi  _zmq.py  _zmq.pyi  database.py  database.pyi
src/unittest/python/: afk_auto_spec_tests.py  auto_rebalance_tests.py  autoready_tests.py  conftest.py  custom_modes_vote_tests.py  duelarena2_tests.py  duelarena_tests.py  fastvotepass_tests.py  fastvotes_tests.py  frag_stats_tests.py  merciful_elo_limit_tests.py  mydiscordbot_tests.py  qlstats_privacy_policy_tests.py  test_auto_rebalance.py  test_autoready.py  test_custom_modes_vote.py  test_duelarena.py  test_fastvotes.py  test_frag_stats.py  test_merciful_elo_limit.py  test_mydiscordbot.py  test_qlstats_privacy_policy.py  test_thirtysecwarn.py  thirtysecwarn_tests.py
src/unittest/python/minqlx_plugin_test/: __init__.py  game.py  player.py  plugin.py  requirements.txt
stubs/: auto_rebalance.pyi  autoready.pyi  custom_modes_vote.pyi  duelarena.pyi  fastvotes.pyi  frag_stats.pyi  last_played.pyi  merciful_elo_limit.pyi  mydiscordbot.pyi  qlstats_privacy_policy.pyi  thirtysecwarn.pyi
stubs/discord_extensions/: admin.pyi  event.pyi  openai_bridge.pyi  qlstats.pyi  slap.pyi  status.pyi  subscribe.pyi  topic_updater.pyi  triggered_chat.pyi
stubs/experimental/: admin_votes.pyi  asdf.pyi  balancetwo.pyi  bday.pyi  chat_fraggers.pyi  cmdlist.pyi  custom_votes.pyi  elocheck.pyi  env_dmg.pyi  openai_bot.pyi  showdown.pyi  spec_rotation.pyi  team_shots.pyi  uptime.pyi  weird_stats.pyi
stubs/minqlx/: __init__.pyi  _commands.pyi  _core.pyi  _events.pyi  _game.pyi  _handlers.pyi  _minqlx.pyi  _player.pyi  _plugin.pyi  _zmq.pyi  database.pyi
tests/: conftest.py  test_auto_rebalance.py  test_autoready.py  test_custom_modes_vote.py  test_duelarena.py  test_fastvotes.py  test_frag_stats.py  test_last_played.py  test_merciful_elo_limit.py  test_mydiscordbot.py  test_qlstats_privacy_policy.py  test_thirtysecwarn.py
tests/discord_extensions/: conftest.py  test_admin.py  test_event.py  test_qlstats.py  test_slap.py  test_status.py  test_subscribe.py  test_topic_updater.py  test_triggered_chat.py
tests/minqlx_plugin_test/: __init__.py  game.py  player.py  plugin.py
