[build-system]
requires = ["setuptools>=61.2", "tox"]
build-backend = "setuptools.build_meta"

[project]
name = "minqlx_plugin_tests"
version = "0.0.1"
authors = [{name = "Markus 'ShiN0' Gaertner"}]
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/mgaertne/minqlx-plugin-tests"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py3{7,8,9,10,11,12},coverage,ruff,mypy
    usedevelop = true

    [gh-actions]
    python =
        3.7: py37
        3.8: py38
        3.9: py39
        3.10: py310
        3.11: py311
        3.12: py312

   [testenv:py3{7,8,9,10,11,12}]
    deps =
        -rrequirements-tests.txt
    commands =
        pytest {posargs:tests}

    [testenv:coverage]
    deps =
        -rrequirements-dev.txt
    commands =
        coverage erase
        coverage run -m pytest {posargs:tests}
        coverage report
        coverage xml
        coverage html

    [testenv:ruff]
    deps =
        -rrequirements-dev.txt
    commands = ruff check {posargs:src stubs tests}

    [testenv:mypy]
    deps =
        -rrequirements-dev.txt
    commands = mypy {posargs}
"""

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = [
    "src",
    "tests",
]

[tool.coverage.paths]
source = [
    "src"
]

[tool.coverage.run]
omit = [
    "src/minqlx/*",
    "src/experimental/*",
    "tests/*",
    "tests/minqlx_plugin_test/*",
]

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = ["C40", "E", "F", "SIM", "TCH"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
mccabe.max-complexity = 10

[tool.mypy]
packages = ["stubs","src","tests"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "stubs.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
