[build-system]
requires = ["setuptools>=61.2", "tox>=4.21"]
build-backend = "setuptools.build_meta"

[project]
name = "minqlx_plugin_tests"
version = "0.0.1"
authors = [{name = "Markus 'ShiN0' Gaertner"}]
license = {text = "BSD-3-Clause"}
classifiers = [
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.7"
dynamic = ["dependencies"]

[tool.setuptools.dynamic]
dependencies = {file = ["requirements.txt"]}

[project.readme]
file = "README.md"
content-type = "text/markdown"

[project.urls]
Homepage = "https://github.com/mgaertne/minqlx-plugin-tests"

[tool.setuptools]
license-files = ["LICENSE"]
include-package-data = false

[tool.setuptools.packages]
find = {namespaces = false}

[tool.tox]
env_list = [ "py38", "py39", "py310", "py311", "py312", "coverage", "ruff", "mypy" ]
use_develop = true

[tool.tox.gh-actions]
python = { "3.8" = "py38", "3.9" = "py39", "3.10" = "py310", "3.11" = "py311", "3.12" = "py312", "3.13 "= "py313" }

[tool.tox.env_run_base]
deps = ["-rrequirements-tests.txt"]
commands = [["pytest", { replace = "posargs", default = [], extend = true }]]

[tool.tox.env.coverage]
deps = ["-rrequirements-dev.txt"]
commands = [
    ["coverage", "erase"],
    ["coverage", "run", "-m", "pytest", { replace = "posargs", default = ["tests"], extend = true }],
    ["coverage", "report"],
    ["coverage", "xml"],
    ["coverage", "html"],
]

[tool.tox.env.ruff]
deps = ["-rrequirements-dev.txt"]
commands = [[ "ruff", "check", { replace = "posargs", default = ["src", "stubs", "tests"], extend = true }]]

[tool.tox.env.mypy]
deps = ["-rrequirements-dev.txt"]
commands = [[ "mypy", { replace = "posargs", default = [], extend = true }]]

[tool.pytest.ini_options]
testpaths = [
    "tests"
]
pythonpath = [
    "src",
    "tests",
]
asyncio_default_fixture_loop_scope = "function"

[tool.coverage.paths]
source = [
    "src"
]

[tool.coverage.run]
omit = [
    "src/minqlx/*",
    "src/experimental/*",
    "tests/*",
    "tests/minqlx_plugin_test/*",
]

[tool.ruff]
exclude = [
    ".eggs",
    ".git",
    ".mypy_cache",
    ".ruff_cache",
    ".tox",
    ".venv",
    "__pypackages__",
    "build",
    "dist",
    "venv",
]
line-length = 120
target-version = "py37"

[tool.ruff.lint]
select = ["C40", "E", "F", "SIM", "TCH"]
ignore = []
fixable = ["A", "B", "C", "D", "E", "F"]
unfixable = []
per-file-ignores = {}
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"
mccabe.max-complexity = 10

[tool.mypy]
packages = ["stubs","src","tests"]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_reexport = true

[[tool.mypy.overrides]]
module = "stubs.*"
disallow_untyped_defs = true
disallow_incomplete_defs = true

[[tool.mypy.overrides]]
module = "tests.*"
disallow_untyped_defs = false
