[metadata]
name = minqlx_plugin_tests
version = 0.0.1
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/mgaertne/minqlx-plugin-tests
author = Markus 'ShiN0' Gaertner
license = BSD-3-Clause
license_file = LICENSE
classifiers =
    License :: OSI Approved :: BSD License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only

[options]
packages = find:
install_requires =
    aiohttp==3.8.3
    aiohttp-retry==2.8.3
    discord.py==2.1.0
    redis==4.4.0
    requests==2.28.1
    schedule==1.1.0
    tox==3.27.1
    zmq
python_requires = >=3.8

[tox:tox]
requires =
    tox-gh-actions
envlist = py3{8,9,10},coverage,flake8,pylint,mypy
usedevelop = true

[gh-actions]
python =
    3.8: py38
    3.9: py39
    3.10: py310, coverage, flake8, pylint, mypy

[testenv]
deps =
    -rrequirements-dev.txt

[testenv:flake8]
commands = flake8 {posargs:src}

[testenv:py3{8,9,10}]
commands =
    pytest {posargs:tests}

[testenv:coverage]
commands =
    coverage erase
    coverage run -m pytest {posargs:tests}
    coverage report
    coverage xml
    coverage html

[testenv:pylint]
commands = pylint --rcfile=setup.cfg {posargs:src}
ignore_outcome = true

[testenv:mypy]
commands = mypy {posargs:src}
ignore_outcome = true

[tool:pytest]
testpaths =
    tests
pythonpath =
    src
    tests

[coverage:paths]
source = src

[coverage:run]
omit =
    src/minqlx/*
    src/experimental/*
    src/experimental/discord_extensions/*
    tests/*
    tests/minqlx_plugin_test/*

[flake8]
extend-ignore = E226,E402,E722,F401,F403,F405,W504
max_line_length = 128

[pylint]
disable = super-on-old-class,arguments-differ,signature-differs,method-hidden,abstract-method,no-member,relative-import,no-init,import-error,attribute-defined-outside-init,abstract-class-not-used,unused-argument,unused-variable,invalid-name,duplicate-code,abstract-class-little-used,too-few-public-methods,too-many-instance-attributes,too-many-ancestors,too-many-return-statements,too-many-lines,too-many-locals,too-many-function-args,too-many-public-methods,too-many-arguments,bad-continuation,no-self-use,missing-docstring,fixme,star-args,locally-disabled,locally-enabled,bad-option-value
max-line-length = 120
max-branches = 40
max-statements = 105

[mypy]
check_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
show_error_codes = true
strict_equality = true
warn_redundant_casts = true
warn_unused_configs = true
no_implicit_reexport = true

[mypy-src.minqlx.*]
no-warn-no-return = true

[mypy-tests.*]
disallow_untyped_defs = false
